@@ -1,4 +1,21 @@
 name: McKillRewards
-version: 0.1
+version: 0.2
 authors: [ mewin ]
 main: de.mewin.killRewards.KillRewardsPlugin
+load: POSTWORLD
+commands:
+  rewards:
+    usage: /rewards <subcommand>
+    description: allows you to reload the rewards and reset the sprees
+    aliases: [ rw, mcrewards ]
+    permission: mcrewards.admin
+permissions:
+  mcrewards.*:
+    default: op
+    children:
+      mcrewards.admin: true
+      mcrewards.rewards: true
+  mcrewards.admin:
+    default: false
+  mcrewards.rewards:
+    default: true
